# crypto_currency_rates

./: .gitignore  docker-compose.yml  docker-example.env  example.env  pyproject.toml  pytest.ini
src/: Dockerfile  main.py  requirements.txt
src/accounts/: crud.py  deps.py  exceptions.py  schemas.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/endpoints/: __init__.py  accounts.py  auth.py  cryptowrapper.py  observer.py
src/auth/: deps.py  exceptions.py  schemas.py  services.py
src/core/: __init__.py  config.py  db.py  deps.py  exceptions.py  log_settings.py  middlewares.py
src/cryptowrapper/: crud.py  exceptions.py  schemas.py  services.py
src/observer/: crud.py  deps.py  exceptions.py  schemas.py  services.py
src/tests/: conftest.py
src/tests/accounts/integration/: test_crud_accounts.py  test_deps_accounts.py
src/tests/accounts/unit/: test_accounts_schemas.py
src/tests/auth/integration/: test_api_v1_auth.py  test_deps_auth.py
src/tests/auth/unit/: test_services_auth.py
src/tests/cryptowrapper/: tests.py
src/tests/cryptowrapper/integration/: test_api_v1_cryptowrapper.py  test_crud_cryptowrapper.py
src/tests/cryptowrapper/unit/: test_cryptowrapper_schemas.py  test_cryptowrapper_services.py
src/tests/fixtures/: __init__.py  accounts.py  auth.py  change_dirs.py  cryptowrapper.py  observer.py
src/tests/integration/api_v1/: test_api_v1_accounts.py  test_api_v1_cryptowrapper.py
src/tests/integration/crud/: test_crud_accounts.py  test_crud_cryptowrapper.py
src/tests/observer/integration/: test_api_v1_observer.py  (+1 more)
(+1 files in other folders)
